--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,7 @@
 pipeline {
-    agent any
+     agent {
+        label 'linux_slave2'
+    }
     stages{
         stage('Build Application') {
             steps {
