--- a/jenkinsfile
+++ b/jenkinsfile
@@ -12,6 +12,9 @@ pipeline {
                 sh 'mvn clean package'
             }
         }
+        stage('Deploy in staging environment'){
+            build job : 'Deploy_Application_Staging_Env'
+        }
     }
     post {
         success {
