--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,7 @@
 pipeline {
-    agent any
+    agent {
+        'linux_slave'
+    }
     stages {
         stage('Build Application') {
             steps {
