--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,6 @@
 pipeline {
     agent {
-        label 'linux_slave'
+        label 'linux_slave2'
     }
     stages {
         stage('Build Application') {
